[package]
name = "axum-csrf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple CSRF protection for axum apps"
repository = "https://github.com/wushilin/axum-csrf.git"

[dependencies]
axum = "0.8.1"
cookie = "0.18.1"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.5.0"
rand = "0.9.0"
serde = {version="1", features=["derive"]}
sha2 = "0.10.8"
short-uuid = "0.2.0"
tokio = "1.43.0"
tower-cookies = "0.11.0"
